attached_assets/Pasted-e-1568-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-1748139746051.txt
e 1568)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 1, in <module>
    from simple_app import app
  File "/home/runner/workspace/simple_app.py", line 1568
    'error': f'MQL strategy file must contain at least one of: {", ".join(required_elements +
             ^
SyntaxError: unterminated string literal (detected at line 1568)
[2025-05-25 02:21:54 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:54 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
[2025-05-25 02:21:55 +0000] [19763] [INFO] Handling signal: winch
